--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"/>
     <TextView
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/showAge"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
@@ -21,6 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"/>
     <TextView
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/showWeight"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
@@ -29,6 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"/>
     <TextView
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/showHeight"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
@@ -37,6 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"/>
     <TextView
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:id="@+id/showToken"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
