--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -48,4 +48,14 @@
         android:id="@+id/showToken"
         android:layout_width="match_parent"
         android:layout_height="30dp"/>
+    <TextView
+        android:text="Step"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"/>
+    <TextView
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:id="@+id/showStep"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 </LinearLayout>
