--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -5,7 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Ranking">
+    <LinearLayout
+        android:id="@+id/tasked"
+        android:background="#2980b9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+        <TextView
+            android:gravity="center"
+            android:textColor="#ecf0f1"
+            android:layout_weight="2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Usesname"></TextView>
+        <TextView
+            android:gravity="center"
+            android:textColor="#ecf0f1"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buoc chay"></TextView>
+
+    </LinearLayout>
+
     <ListView
+        android:layout_below="@id/tasked"
         android:id="@+id/listRanking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></ListView>
