--- a/app/src/main/res/layout/layout_ranking.xml
+++ b/app/src/main/res/layout/layout_ranking.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="3"
+    >
 
     <TextView
+        android:layout_weight="2"
         android:id="@+id/Username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -11,6 +14,8 @@
         android:textSize="30sp"></TextView>
 
     <TextView
+        
+        android:layout_weight="1"
         android:id="@+id/buocchay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
