--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,32 +75,14 @@
             android:layout_marginLeft="53dp"
             android:layout_marginTop="55dp"
             android:layout_marginEnd="50dp"
-
             android:layout_marginRight="49dp"
             android:layout_marginBottom="50dp"
+            android:indeterminate="true"
             android:indeterminateDrawable="@drawable/progressbar_circular"
+            android:max="100"
             android:padding="10dp"
+            android:progress="50"></ProgressBar>
 
-            android:progress="1"></ProgressBar>
-
-        <TextView
-            android:id="@+id/steps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/progressBar"
-            android:gravity="center_vertical"
-            android:text="Steps"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="30dp" />
-
-        <TextView
-            android:id="@+id/tv_steps"
-            android:layout_below="@id/steps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="0"
-            android:textSize="40dp"/>
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
