--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/dl">
+    android:orientation="vertical">
+
     <RelativeLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
+
         <RelativeLayout
             android:id="@+id/khung1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/iconRunning"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/running"></ImageView>
-            <TextView
-                android:layout_margin="5dp"
-                android:id="@+id/buocchay"
-                android:layout_toRightOf="@+id/iconRunning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1000 bước"></TextView>
-            <TextView
-                android:layout_margin="5dp"
-                android:id="@+id/kcal"
-                android:layout_toRightOf="@+id/buocchay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="(130 Kcal"></TextView>
-            <TextView
-                android:layout_marginTop="5dp"
-                android:id="@+id/km"
-                android:layout_toRightOf="@+id/kcal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=", 3km)"></TextView>
-            <TextView
-                android:layout_margin="3dp"
-                android:id="@+id/muctieu"
-                android:layout_below="@id/buocchay"
-                android:layout_toRightOf="@id/iconRunning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mục tiêu:"></TextView>
-            <TextView
-                android:layout_marginTop="3dp"
-                android:id="@+id/buocchaymuctieu"
-                android:layout_toRightOf="@+id/muctieu"
-                android:layout_below="@id/kcal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="8432"></TextView>
 
+            <TextView
+                android:id="@+id/buocchay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_toRightOf="@+id/iconRunning"
+                android:text="1000 bước"></TextView>
+
+            <TextView
+                android:id="@+id/kcal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_toRightOf="@+id/buocchay"
+                android:text=""></TextView>
+            <!--            <TextView-->
+            <!--                android:layout_marginTop="5dp"-->
+            <!--                android:id="@+id/km"-->
+            <!--                android:layout_toRightOf="@+id/kcal"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text=", 3km)"></TextView>-->
+            <TextView
+                android:id="@+id/muctieu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/buocchay"
+                android:layout_margin="3dp"
+                android:layout_toRightOf="@id/iconRunning"
+                android:text="Mục tiêu:"></TextView>
+
+            <TextView
+                android:id="@+id/buocchaymuctieu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/kcal"
+                android:layout_marginTop="3dp"
+                android:layout_toRightOf="@+id/muctieu"
+                android:text="8432"></TextView>
 
 
         </RelativeLayout>
 
+        <!--        <ProgressBar-->
+        <!--            android:id="@+id/progressBar"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="278dp"-->
+        <!--            android:layout_below="@id/khung1"-->
+        <!--            android:layout_alignParentLeft="true"-->
+        <!--            android:layout_alignParentRight="true"-->
+        <!--            android:layout_marginStart="50dp"-->
+        <!--            android:layout_marginLeft="53dp"-->
+        <!--            android:layout_marginTop="55dp"-->
+        <!--            android:layout_marginEnd="50dp"-->
+        <!--            android:layout_marginRight="49dp"-->
+        <!--            android:layout_marginBottom="50dp"-->
+        <!--            android:indeterminateDrawable="@drawable/progressbar_circular"-->
+        <!--            android:max="100"-->
+        <!--            android:padding="10dp"-->
+        <!--            android:progress="50"-->
+        <!--          ></ProgressBar>-->
         <ProgressBar
             android:id="@+id/progressBar"
+
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="wrap_content"
             android:layout_height="278dp"
             android:layout_below="@id/khung1"
@@ -77,21 +102,33 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="49dp"
             android:layout_marginBottom="50dp"
-            android:indeterminate="true"
-            android:indeterminateDrawable="@drawable/progressbar_circular"
+            android:background="@drawable/circle_shape"
+            android:indeterminate="false"
+            android:layout_centerInParent="true"
             android:max="100"
-            android:padding="10dp"
-            android:progress="50"></ProgressBar>
+            android:progress="15"
+            android:progressDrawable="@drawable/progressbar_circular" />
+        <TextView
+            android:id="@+id/txtProgress"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/progressBar"
+            android:layout_centerInParent="true"
+           android:layout_marginBottom="120dp"
+            android:text="15%"
+            android:textSize="30dp"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nv"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_menu"
         app:headerLayout="@layout/navigation_header"
-        android:id="@+id/nv"
+        app:menu="@menu/navigation_menu"
 
         />
 </androidx.drawerlayout.widget.DrawerLayout>
