--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_toRightOf="@+id/buocchay"
+
                 android:text=""></TextView>
             <!--            <TextView-->
             <!--                android:layout_marginTop="5dp"-->
@@ -50,15 +51,17 @@
             <!--                android:text=", 3km)"></TextView>-->
 
 
+
+
             <TextView
-                android:id="@+id/km"
+                android:id="@+id/muctieu1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@+id/kcal"
-                android:text=""></TextView>
 
-
+                android:layout_below="@id/tv_steps"
+                android:layout_margin="3dp"
+                android:layout_toRightOf="@id/iconRunning"
+                android:text="Mục tiêu:"></TextView>
 
             <TextView
                 android:id="@+id/buocchaymuctieu"
@@ -66,30 +69,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/kcal"
                 android:layout_marginTop="3dp"
-                android:layout_toRightOf="@+id/muctieu"
-                android:text="8432"></TextView>
+                android:layout_toRightOf="@+id/muctieu1"
+                android:text="10000 buoc"></TextView>
 
 
         </RelativeLayout>
-
-        <!--        <ProgressBar-->
-        <!--            android:id="@+id/progressBar"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="278dp"-->
-        <!--            android:layout_below="@id/khung1"-->
-        <!--            android:layout_alignParentLeft="true"-->
-        <!--            android:layout_alignParentRight="true"-->
-        <!--            android:layout_marginStart="50dp"-->
-        <!--            android:layout_marginLeft="53dp"-->
-        <!--            android:layout_marginTop="55dp"-->
-        <!--            android:layout_marginEnd="50dp"-->
-        <!--            android:layout_marginRight="49dp"-->
-        <!--            android:layout_marginBottom="50dp"-->
-        <!--            android:indeterminateDrawable="@drawable/progressbar_circular"-->
-        <!--            android:max="100"-->
-        <!--            android:padding="10dp"-->
-        <!--            android:progress="50"-->
-        <!--          ></ProgressBar>-->
         <ProgressBar
             android:id="@+id/progressBar"
 
@@ -113,7 +97,6 @@
             android:progressDrawable="@drawable/progressbar_circular" />
         <TextView
             android:id="@+id/txtProgress"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/progressBar"
