--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         android:src="@drawable/account">
     </ImageView>
-    <TextView
-        android:id="@+id/Username"
-        android:textAlignment="center"
-        android:textSize="60px"
-        android:text="Running"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></TextView>
+<!--    <TextView-->
+<!--        android:id="@+id/Username"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="60px"-->
+<!--        android:text="Running"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"></TextView>-->
     <TextView
         android:id="@+id/GmailUser"
         android:textAlignment="center"
