--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -1,38 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Ranking">
+
     <LinearLayout
-        android:id="@+id/tasked"
-        android:background="#2980b9"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="3">
+        android:layout_height="wrap_content">
+
         <TextView
-            android:gravity="center"
-            android:textColor="#ecf0f1"
-            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Usesname"></TextView>
-        <TextView
-            android:gravity="center"
-            android:textColor="#ecf0f1"
             android:layout_weight="1"
+            android:text="User"
+            android:textAlignment="center" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Buoc chay"></TextView>
+            android:layout_weight="1"
+            android:text="Total count"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
     <ListView
-        android:layout_below="@id/tasked"
-        android:id="@+id/listRanking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></ListView>
-
-</RelativeLayout>
+        android:id="@+id/list_ranking"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
